# Chaa

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  mkdocs.yml  runtime_params.ini
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  athenapk.md  benchmarks.md  cross-validation.md  custom-problem.md  freya.md  getting-started.md  idefix.md  index.md  test-problems.md  tests.md  tutorial.md
docs/user-guide/: boundaries.md  configuration.md  equations.md  gpu.md  grid.md  numerics.md  output.md  parallel.md  particles.md  physics.md  plotting.md  restart.md
src/: Boundary.chpl  Chaa.chpl  Cli.chpl  Eos.chpl  Evolve.chpl  Fargo.chpl  Forcing.chpl  Gpu.chpl  Grid.chpl  Hdf5IO.chpl  Hydro.chpl  IniReader.chpl  Logo.chpl  Output.chpl  Params.chpl  Particles.chpl  Problems.chpl  Recon.chpl  Restart.chpl  Riemann.chpl  SelfGravity.chpl  State.chpl  chaa_h5.h  compile_params.chpl
src/problems/: Blast.chpl  Cloud.chpl  CylinderFlow.chpl  DiskCavity.chpl  DoubleMach.chpl  Epicycle.chpl  IsentropicVortex.chpl  KelvinHelmholtz.chpl  KhIdefix.chpl  LinearWave.chpl  ProblemUtils.chpl  RayleighTaylor.chpl  Riemann2D.chpl  Sedov.chpl  Sod.chpl  TaylorCouette.chpl  ThermalWave.chpl  Turbulence.chpl  TwoBlast.chpl  blast_runtime_params.ini  cloud_runtime_params.ini  cylinderFlow_runtime_params.ini  diskCavity_runtime_params.ini  dmr_runtime_params.ini  kh_runtime_params.ini  khi_runtime_params.ini  linearWave_runtime_params.ini  riemann2d_runtime_params.ini  rt_runtime_params.ini  sedov_runtime_params.ini  sod_runtime_params.ini  taylorCouette_runtime_params.ini  thermalWave_runtime_params.ini  turbulence_runtime_params.ini  twoblast_runtime_params.ini  vortex_runtime_params.ini
tests/: cases.conf  run_case.sh  run_gpu_compare.sh  run_multilocale_combine.sh
tests/reference/: athenapk_sod.txt  idefix_machref.txt  idefix_sedov3d.txt  idefix_sod.txt  idefix_sodiso.txt
tests/validate/: combine_check.py  common.py  exact_riemann.py  gpu_check.py  validate.py
tools/: bench.sh  chaa_io.py  combine_pieces.py  make_gallery.sh  plot_bench.py  plot_compare.py  plot_fields.py  plot_gpu_bench.py
tools/slurm/: README.md  build-chapel-gpu-v100.slurm  build-chapel-gpu.slurm  build-chapel.slurm  freya-bench-multi.slurm  freya-bench-node.slurm  freya-chaa.slurm  freya-env.sh  freya-gpu-bench-pgpu.slurm  freya-gpu-bench.slurm  freya-gpu-env.sh  freya-gpu-multi.slurm  freya-gpu-tests.slurm  freya-tests.slurm
